# ICT_log_reader

./: Cargo.toml
src/: logfile.rs  main.rs
