[package]
name = "ict_lr"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ict_logfile = { path = "../ict_logfile"}
chrono = "0.4.38"
eframe = "0"
egui = "0"
egui_extras = "0.27.2"
env_logger = "0"
image = "0.25.1"
